@@ -679,6 +679,9 @@ Release 2.6.0 - UNRELEASED
     HADOOP-11250. fix endmacro of set_find_shared_library_without_version in
     CMakeLists (Yi Liu via Colin P. McCabe)
 
+    HADOOP-11221. IdentityHashStore assumes System.identityHashCode() is
+    non-negative. (Jinghui Wang via szetszwo)
+
 Release 2.5.1 - 2014-09-05
 
   INCOMPATIBLE CHANGES
